# colossus

./: .bazelproject  .bazelrc  .gitignore  BUILD  BUILD.bazel  Gopkg.toml  LICENSE  Makefile  README.md  WORKSPACE  build.gradle  go.mod  go.sum  skaffold.yaml
auth/: BUILD  main.go
cli/: BUILD  BUILD.bazel  main.go
cli/cmd/: BUILD  root.go
configs/: prometheus.yml
data/: BUILD  DataHandler.java
k8s/: colossus.yaml  elasticsearch.yaml  fluentd.yaml  monitoring.yaml  redis.yaml  web.yaml
proto/auth/: BUILD  auth.proto
proto/data/: BUILD  data.proto
proto/userinfo/: BUILD  userinfo.proto
userinfo/: BUILD  main.rs  userinfo-server.cc  userinfo-server.h
web/: BUILD  main.go
