package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//java:image.bzl", "java_image")

# A Gazelle executable for auto-generating Go BUILD definitions
gazelle(
    name = "gazelle",
    command = "fix",
    prefix = "github.com/lucperkins/colossus",
)

# This line is necessary to keep Gazelle from using the vendored gRPC for Go library:
# gazelle:exclude vendor

# A Docker image for the web service (Linux binary)
go_image(
    name = "colossus-web",
    binary = "//web:web_linux",
)

# A Docker image for the auth service (Linux binary)
go_image(
    name = "colossus-auth",
    binary = "//auth:auth_linux",
)

# A Docker image for the data service
java_image(
    name = "colossus-data",
    main_class = "colossus.DataHandler",
    runtime_deps = ["//data:data_java_lib"],
)
