package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//java:image.bzl", "java_image")

# A Gazelle executable for auto-generating Go BUILD definitions
gazelle(
    name = "gazelle",
    prefix = "github.com/lucperkins/colossus",
)

# This line is necessary to keep Gazelle from using the vendored gRPC for Go library:
# gazelle:exclude vendor

# A Docker image for the web service (Linux binary)
go_image(
    name = "colossus-web",
    binary = "//web:web_linux_bin",
)

# A Docker image for the auth service (Linux binary)
go_image(
    name = "colossus-auth",
    binary = "//auth:auth_linux_bin",
)

# A Docker image for the data service
java_image(
    name = "colossus-data",
    main_class = "colossus.DataHandler",
    runtime_deps = ["//data:data_java_lib"],
)

docker_push(
    name = "colossus-web-push",
    image = ":colossus-web",
    registry = "localhost:5000",
    repository = "colossus/web",
)

docker_push(
    name = "colossus-auth-push",
    image = ":colossus-auth",
    registry = "localhost:5000",
    repository = "colossus/auth",
)

docker_push(
    name = "colossus-data-push",
    image = ":colossus-data",
    registry = "localhost:5000",
    repository = "colossus/data",
)
