package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//java:image.bzl", "java_image")

DOCKER_REGISTRY_URL = "localhost:5000"

# A Gazelle executable for auto-generating Go BUILD definitions
gazelle(
    name = "gazelle",
    prefix = "github.com/lucperkins/colossus",
)

# This line is necessary to keep Gazelle from using the vendored gRPC for Go library:
# gazelle:exclude vendor

# A Docker image for the web service (Linux binary)
go_image(
    name = "colossus-web",
    binary = "//web:web_linux_bin",
)

# A Docker image for the auth service (Linux binary)
go_image(
    name = "colossus-auth",
    binary = "//auth:auth_linux_bin",
)

# A Docker image for the data service
java_image(
    name = "colossus-data",
    main_class = "colossus.DataHandler",
    runtime_deps = ["//data:data_java_lib"],
)

# A Docker image for the userinfo C++ service
cc_image(
    name = "colossus-userinfo",
    binary = "//userinfo:userinfo-bin",
)

docker_push(
    name = "auth-push",
    image = ":colossus-auth",
    registry = DOCKER_REGISTRY_URL,
    repository = "colossus/auth",
    stamp = True,
    tag = "{BUILD_TIMESTAMP}",
)

docker_push(
    name = "web-push",
    image = ":colossus-web",
    registry = DOCKER_REGISTRY_URL,
    repository = "colossus/web",
    stamp = True,
    tag = "{BUILD_TIMESTAMP}",
)

docker_push(
    name = "data-push",
    image = ":colossus-data",
    registry = DOCKER_REGISTRY_URL,
    repository = "colossus/data",
    stamp = True,
    tag = "{BUILD_TIMESTAMP}",
)

docker_push(
    name = "userinfo-push",
    image = ":colossus-userinfo",
    registry = DOCKER_REGISTRY_URL,
    repository = "colossus/userinfo",
    stamp = True,
    tag = "{BUILD_TIMESTAMP}",
)
